# source-code-security-ai-checker

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile.security  LICENSE  Makefile  README.es.md  README.fr.md  README.it.md  README.md  README.ru.md  alembic.ini  config.yml  config.yml.example  docker-compose.yml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.0.1-MILESTONE-AUDIT.md  v1.0.1-REQUIREMENTS.md  v1.0.2-MILESTONE-AUDIT.md  v1.0.2-REQUIREMENTS.md  v2.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_add_skip_ai_to_scans.py  002_add_target_url_to_scans.py
docs/: admin-guide.md  api.md  architecture.md  custom-rules.md  database-schema.md  devops-guide.md  transfer-guide.md
docs/en/: admin-guide.md  api.md  architecture.md  custom-rules.md  database-schema.md  devops-guide.md  transfer-guide.md  user-guide.md
docs/es/: admin-guide.md  api.md  architecture.md  custom-rules.md  database-schema.md  devops-guide.md  transfer-guide.md  user-guide.md
docs/fr/: admin-guide.md  api.md  architecture.md  custom-rules.md  database-schema.md  devops-guide.md  transfer-guide.md  user-guide.md
docs/it/: admin-guide.md  api.md  architecture.md  custom-rules.md  database-schema.md  devops-guide.md  transfer-guide.md  user-guide.md
docs/ru/: admin-guide.md  api.md  architecture.md  custom-rules.md  database-schema.md  devops-guide.md  transfer-guide.md  user-guide.md
src/scanner/: __init__.py  __main__.py  config.py  main.py
tests/: conftest.py  test_config.py  test_health.py  test_models.py
tests/phase_01/: conftest.py  test_config.py  test_fingerprint.py  test_health.py  test_models.py
tests/phase_02/: conftest.py  test_adapter_checkov.py  test_adapter_cppcheck.py  test_adapter_gitleaks.py  test_adapter_semgrep.py  test_adapter_trivy.py  test_base_adapter.py  test_cli.py  (+3 more)
(+313 files in other folders)
