[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-ai-scanner"
version = "0.1.0"
description = "AI-powered security vulnerability scanner"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings[yaml]",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "alembic",
    "typer[all]",
    "rich",
    "anthropic>=0.86.0",
    "jinja2>=3.1.6",
    "weasyprint>=68.0",
    "matplotlib>=3.10.0",
    "defusedxml>=0.7.1",
    "cvss>=3.2",
    "PyJWT>=2.12.1",
    "pwdlib[bcrypt]>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/scanner"]
